# myROS

./: 2015-09-23-14-56-37.bag  Install_Kinect_Openni  README.md  test.txt
ar_listener/: CMakeLists.txt  package.xml
ar_listener/src/: marker_listener.cpp
beginner_tutorials/: CMakeLists.txt  package.xml
gestures/: CMakeLists.txt  README.md  package.xml  text.txt  visualize_markers.rviz
gestures/bag_files/: LL_to_UR1.bag  LL_to_UR10.bag  LL_to_UR11.bag  LL_to_UR12.bag  LL_to_UR13.bag  LL_to_UR14.bag  LL_to_UR15.bag  LL_to_UR16.bag  LL_to_UR17.bag  LL_to_UR18.bag  LL_to_UR19.bag  LL_to_UR2.bag  LL_to_UR20.bag  LL_to_UR21.bag  LL_to_UR22.bag  LL_to_UR23.bag  LL_to_UR24.bag  LL_to_UR25.bag  LL_to_UR26.bag  LL_to_UR27.bag  LL_to_UR28.bag  LL_to_UR29.bag  LL_to_UR3.bag  LL_to_UR30.bag  LL_to_UR4.bag  LL_to_UR5.bag  LL_to_UR6.bag  LL_to_UR7.bag  LL_to_UR8.bag  LL_to_UR9.bag  LR_lowerWave.bag  LR_lowerWave10.bag  LR_lowerWave11.bag  LR_lowerWave12.bag  LR_lowerWave13.bag  LR_lowerWave14.bag  LR_lowerWave15.bag  LR_lowerWave16.bag  LR_lowerWave17.bag  LR_lowerWave18.bag  (+170 more)
gestures/bag_files2/: .~lock.UL_slash_viz.ods#  .~lock.circle_visualization.ods#  .~lock.iu_visualization.ods#  .~lock.s_visualization.ods#  .~lock.static_viz.ods#  .~lock.triangle_viz.ods#  LL_slash_1.bag  LL_slash_10.bag  LL_slash_11.bag  LL_slash_12.bag  LL_slash_13.bag  LL_slash_14.bag  LL_slash_15.bag  LL_slash_16.bag  LL_slash_17.bag  LL_slash_18.bag  LL_slash_19.bag  LL_slash_2.bag  LL_slash_20.bag  LL_slash_21.bag  LL_slash_22.bag  LL_slash_23.bag  LL_slash_24.bag  LL_slash_25.bag  LL_slash_26.bag  LL_slash_27.bag  LL_slash_28.bag  LL_slash_29.bag  LL_slash_3.bag  LL_slash_30.bag  LL_slash_4.bag  LL_slash_5.bag  LL_slash_6.bag  LL_slash_7.bag  LL_slash_8.bag  LL_slash_9.bag  UL_slash_1.bag  UL_slash_10.bag  UL_slash_11.bag  UL_slash_12.bag  (+227 more)
gestures/src/: dmp_calculate_f_target.cpp  rosbag_traj_parse.py  viz_rosbag.cpp
hw3/: .~lock.dmp_record.ods#  CMakeLists.txt  circular_forward_trajectory.bag  demo_xyz.txt  dmp_record.ods  f_target_x.txt  package.xml  python_output.txt  reach.bag  readme.md  t.txt  x_out.txt  xy_out.txt
hw3/demo_bags/: .~lock.lift_box_4 vizualization.ods#  .~lock.lift_box_4_dmp_from_origin.ods#  lift_box_1.bag  lift_box_2 vizualization.ods  lift_box_2.bag  lift_box_3.bag  lift_box_4 vizualization.ods  lift_box_4.bag  lift_box_4_dmp_from_origin.ods  lift_box_5.bag
hw3/launch/: can.launch  objects_pr2.launch  pr2_dmp_execute.launch  pr2_follow_trajectory.launch  pr2_world.launch  table.launch
hw3/models/: block.sdf
hw3/src/: backup_dmp_f_target_calc.cpp  block_marker.cpp  circ_rosbag_parse.py  circ_trajectory_viz_execution.cpp  circ_viz_rosbag.cpp  dmp_f_target_calc.cpp  dmp_pr2_execute.cpp  x_out.txt
simple_bag/: mainpage.dox  manifest.xml
simple_bag/src/: sample_bag.py
simple_trajectory/: 10msgs.txt  CMakeLists.txt  manifest.xml
simple_trajectory/bagfiles/: 2015-09-07-22-38-09.bag  2015-09-07-22-41-34.bag  sample_bag.txt
simple_trajectory/src/: get10_jointState_msgs.py  output_100msgs.py  simple_trajectory.cpp  topiclist.txt
try_moveit/: CMakeLists.txt  package.xml
try_moveit/launch/: pr2_follow_trajectory.launch
try_moveit/src/: moveit_rosbag.cpp  rosbag_visualize_marker_trajectory.cpp  simple_move_pr2_right_arm.cpp  trajectory_viz_execution.cpp  try_move_pr2_right_arm.cpp
